--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/joi": "^17.2.3",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.16.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
